--- a/app/src/main/res/layout-land/fragment_clock.xml
+++ b/app/src/main/res/layout-land/fragment_clock.xml
@@ -34,7 +34,7 @@
         android:id="@+id/txtv_current_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/colorWhite"
         android:textSize="56sp"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -43,19 +43,17 @@
 
     <com.leondzn.simpleanalogclock.SimpleAnalogClock
         android:id="@+id/clock"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="200dp"
-        android:layout_margin="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:faceDrawable="@drawable/ic_clock_face_3"
         app:hourTint="#F550BB"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/txtv_current_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtv_current_seconds"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtv_current_time"
+        app:layout_constraintWidth_percent=".3"
         app:minuteTint="#70CCFF"
         app:secondTint="#FFAD71" />
 
