--- a/app/src/main/res/layout/fragment_task_timer_2.xml
+++ b/app/src/main/res/layout/fragment_task_timer_2.xml
@@ -12,44 +12,45 @@
         android:id="@+id/txtv_title_task_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Task timer"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline4" />
 
     <Chronometer
         android:id="@+id/chronometer"
-        android:layout_width="0dp"
+        android:layout_width="281dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif-medium"
         android:textAlignment="textStart"
         android:textColor="@color/colorWhite"
         android:textSize="36sp"
-        app:layout_constraintEnd_toStartOf="@+id/clock_of_task_timer"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks" />
+        app:layout_constraintEnd_toStartOf="parent"
+        tools:layout_editor_absoluteY="229dp" />
 
     <rm.com.clocks.ClockImageView
         android:id="@+id/clock_of_task_timer"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_centerInParent="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:clockColor="#BBFFFFFF"
         app:frameWidth="regular"
         app:hours="12"
         app:indeterminateSpeed="2"
-        app:layout_constraintBottom_toBottomOf="@+id/chronometer"
+        app:layout_constraintBottom_toTopOf="@+id/txtv_task_label"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/chronometer"
-        app:layout_constraintTop_toTopOf="@+id/chronometer"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.45999998"
+        app:layout_constraintVertical_chainStyle="packed"
         app:minutes="0"
         app:pointerWidth="thin"
         app:timeSetDuration="400" />
@@ -58,17 +59,13 @@
         android:id="@+id/rcv_tasks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
         android:minHeight="116dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias=".50"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtv_title_task_timer"
-        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="parent"
         tools:itemCount="1"
         tools:layoutManager="LinearLayoutManager"
+        tools:layout_editor_absoluteX="266dp"
         tools:listitem="@layout/recycler_view_item" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -82,39 +79,38 @@
         android:id="@+id/fab_play_task_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        app:rippleColor="#FFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fab_stop_task_timer"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:rippleColor="#FFF"
         app:srcCompat="@drawable/ic_play_button_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_stop_task_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/fab_play_task_timer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fab_play_task_timer"
         app:layout_constraintTop_toTopOf="@+id/fab_play_task_timer"
         app:rippleColor="#FFF"
-        app:srcCompat="@drawable/ic_stop_black_24dp"
-        tools:visibility="visible" />
+        app:srcCompat="@drawable/ic_stop_black_24dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edtx_task"
-        android:layout_width="0dp"
+        android:layout_width="329dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:theme="@style/MyTextInputLayout"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/chronometer">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -142,26 +138,28 @@
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/rcv_tasks" />
 
-    <TextView
-        android:id="@+id/txtv_task_label"
-        android:layout_width="250dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:fontFamily="sans-serif-light"
-        android:maxLength="180"
-        android:textAlignment="center"
-        android:textColor="@color/colorWhite"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/edtx_task"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edtx_task"
-        tools:text="@tools:sample/lorem/random" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.9" />
+
+    <TextView
+        android:id="@+id/txtv_task_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif-light"
+        android:maxLength="180"
+        android:textAlignment="center"
+        android:textColor="@color/colorWhite"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/clock_of_task_timer"
+        tools:text="@tools:sample/lorem/random" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
