--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,10 @@
         <item name="colorControlActivated">@color/colorAccent</item>
     </style>
 
+    <style name="timePickerAlarmStyle" parent="AppTheme">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:paddingTop">8dp</item>
+    </style>
+
 </resources>
